# Ferrumpy

./: .gitignore  Cargo.toml  README.md  import  pyproject.toml  ruff.toml
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: installation.md  internal.md  user_guide.md
ferrumpy-core/: Cargo.toml
ferrumpy-core/src/: lib.rs  python.rs
ferrumpy-core/src/dwarf/: mod.rs
ferrumpy-core/src/expr/: ast.rs  error.rs  eval.rs  mod.rs  parser.rs  value.rs
ferrumpy-core/src/libgen/: mod.rs  resolver.rs  transformer.rs
ferrumpy-core/src/lsp/: client.rs  mod.rs  types.rs
ferrumpy-core/src/protocol/: mod.rs
ferrumpy-core/src/repl/: mod.rs  scan.rs  session.rs
ferrumpy-repl-worker/: Cargo.toml
ferrumpy-repl-worker/src/: main.rs
ferrumpy-server/: Cargo.toml
ferrumpy-server/src/: handler.rs  main.rs
python/ferrumpy/: __init__.py  bridge.py  commands.py  ffi_bridge.py  path_resolver.py  repl.py  repl_ui.py  serializer.py  warm_cache.py
python/ferrumpy/providers/: __init__.py
scripts/: ci-local.sh  install.sh
tests/: inspect_var.py  poc_interactive_repl.py  poc_memory_read.py  poc_prompt_toolkit.py  run_lldb_tests.py  run_tests.sh  test.sh  test_basic_types.py  test_completions.py  test_enum.exp  test_harness.py  test_interrupt.exp  test_interrupt_simple.exp  test_multifile.exp  test_repl.exp  test_snapshot_items.exp  test_snapshot_items.py  test_type_normalization.py  test_variable_access.exp
tests/rust_sample/: Cargo.toml
tests/rust_sample/src/: lib.rs  main.rs  types.rs  utils.rs
