[workspace]
resolver = "2"
members = [
    "ferrumpy-core",
    "ferrumpy-server",
    "ferrumpy-repl-worker",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["FerrumPy Contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
