[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ferrumpy"
version = "0.1.0"
description = "Rust debugger enhancements for LLDB"
requires-python = ">=3.9"

[tool.maturin]
python-source = "python"
module-name = "ferrumpy.ferrumpy_core"
bindings = "pyo3"
manifest-path = "ferrumpy-core/Cargo.toml"
features = ["python"]

