[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ferrumpy"
version = "0.1.0"
description = "Rust debugger enhancements for LLDB"
requires-python = ">=3.9"

[tool.maturin]
python-source = "python"
module-name = "ferrumpy.ferrumpy_core"
bindings = "pyo3"
manifest-path = "ferrumpy-core/Cargo.toml"
features = ["python"]
strip = true

# Include data directory contents in the wheel
# The data/bin directory should contain ferrumpy-repl-worker binary
# Run: mkdir -p data/bin && cp target/release/ferrumpy-repl-worker data/bin/
data = "data"
